classDiagram
    direction TB

    %% ================================================================
    %% OOD v1-1
    %% 基於 OOD-v1：只改善 Observer 的事件資料模型。
    %% 以具型別 CommunityEvent 子類別取代 payload: Object，讓事件
    %% 與 OOA 的 Message / Post / VoiceMessage 等領域物件可追蹤。
    %% ================================================================

    class WaterballCommunity {
        +currentTime: DateTime
        +login(participant: Participant) void
        +logout(participantId: String) void
        +elapseTime(amount: int, unit: String) void
        +getOnlineParticipants() List~Participant~
        +getOnlineCount() int
        -observers: List~CommunityObserver~
        +register(observer: CommunityObserver) void
        +unregister(observer: CommunityObserver) void
        +notify(event: CommunityEvent) void
    }

    class Participant {
        <<abstract>>
        +id: String
    }

    class Member {
        +role: Role
        +sendMessage(chatRoom: ChatRoom, content: String, tags: List~String~) void
        +publishPost(forum: Forum, title: String, content: String, tags: List~String~) void
        +commentPost(forum: Forum, postId: String, content: String, tags: List~String~) void
        +startBroadcast(broadcast: Broadcast) void
        +speak(broadcast: Broadcast, content: String) void
        +stopBroadcast(broadcast: Broadcast) void
    }

    class Role {
        <<enumeration>>
        ADMIN
        MEMBER
    }

    class ChatRoom {
        +postMessage(message: Message) void
        -observers: List~CommunityObserver~
        +register(observer: CommunityObserver) void
        +unregister(observer: CommunityObserver) void
        +notify(event: CommunityEvent) void
    }

    class Forum {
        +createPost(post: Post) void
        +addComment(postId: String, comment: Comment) void
        -observers: List~CommunityObserver~
        +register(observer: CommunityObserver) void
        +unregister(observer: CommunityObserver) void
        +notify(event: CommunityEvent) void
    }

    class Broadcast {
        +currentSpeakerId: String
        +start(speakerId: String) void
        +speak(voiceMessage: VoiceMessage) void
        +stop(speakerId: String) void
        +isBroadcasting() bool
        -observers: List~CommunityObserver~
        +register(observer: CommunityObserver) void
        +unregister(observer: CommunityObserver) void
        +notify(event: CommunityEvent) void
    }

    class Message {
        +authorId: String
        +content: String
        +tags: List~String~
    }

    class Post {
        +id: String
        +authorId: String
        +title: String
        +content: String
        +tags: List~String~
        +addComment(comment: Comment) void
    }

    class Comment {
        +authorId: String
        +content: String
        +tags: List~String~
    }

    class VoiceMessage {
        +speakerId: String
        +content: String
    }

    class RecordingSession {
        +recorderId: String
        +addVoice(message: VoiceMessage) void
        +generateReplay() String
    }

    class KnowledgeKingGame {
        +currentQuestionIndex: int
        +startTime: DateTime
        +getCurrentQuestion() Question
        +submitAnswer(memberId: String, answer: String) bool
        +isFinished() bool
        +isTimeout(currentTime: DateTime) bool
        +getWinner() String
    }

    class Question {
        +number: int
        +description: String
        +options: List~String~
        +correctAnswer: String
        +isCorrect(answer: String) bool
    }

    %% ------------------------------------------------
    %% Observer：統一更新操作，但事件本身為強型別領域事件。
    %% ------------------------------------------------
    class Observable {
        <<interface, Subject>>
        +register(observer: CommunityObserver) void
        +unregister(observer: CommunityObserver) void
        +notify(event: CommunityEvent) void
    }

    class CommunityObserver {
        <<interface, Observer>>
        +update(event: CommunityEvent) void
    }

    class CommunityEvent {
        <<interface, Event Contract>>
    }

    class MessageReceivedEvent {
        +message: Message
    }

    class PostPublishedEvent {
        +post: Post
    }

    class BroadcastStartedEvent {
        +speakerId: String
    }

    class VoiceSpokenEvent {
        +voiceMessage: VoiceMessage
    }

    class BroadcastStoppedEvent {
        +speakerId: String
    }

    class TimeElapsedEvent {
        +seconds: int
    }

    %% ------------------------------------------------
    %% State：沿用 OOD-v1 的 Context operations 與 Concrete States。
    %% ------------------------------------------------
    class State {
        <<interface>>
        +onEnter(bot: Bot) void
        +onExit(bot: Bot) void
        +onMessageReceived(bot: Bot, message: Message) void
        +onPostPublished(bot: Bot, post: Post) void
        +onBroadcastStarted(bot: Bot, speakerId: String) void
        +onVoiceSpoken(bot: Bot, voiceMessage: VoiceMessage) void
        +onBroadcastStopped(bot: Bot, speakerId: String) void
        +onTimeElapsed(bot: Bot, seconds: int) void
    }

    class NormalState {
        <<Concrete State>>
        +onEnter(bot: Bot) void
        +onExit(bot: Bot) void
        +onMessageReceived(bot: Bot, message: Message) void
        +onPostPublished(bot: Bot, post: Post) void
        +onBroadcastStarted(bot: Bot, speakerId: String) void
        +onVoiceSpoken(bot: Bot, voiceMessage: VoiceMessage) void
        +onBroadcastStopped(bot: Bot, speakerId: String) void
        +onTimeElapsed(bot: Bot, seconds: int) void
    }

    class RecordState {
        <<Concrete State>>
        -session: RecordingSession
        +onEnter(bot: Bot) void
        +onExit(bot: Bot) void
        +onMessageReceived(bot: Bot, message: Message) void
        +onPostPublished(bot: Bot, post: Post) void
        +onBroadcastStarted(bot: Bot, speakerId: String) void
        +onVoiceSpoken(bot: Bot, voiceMessage: VoiceMessage) void
        +onBroadcastStopped(bot: Bot, speakerId: String) void
        +onTimeElapsed(bot: Bot, seconds: int) void
    }

    class KnowledgeKingState {
        <<Concrete State>>
        -game: KnowledgeKingGame
        +onEnter(bot: Bot) void
        +onExit(bot: Bot) void
        +onMessageReceived(bot: Bot, message: Message) void
        +onPostPublished(bot: Bot, post: Post) void
        +onBroadcastStarted(bot: Bot, speakerId: String) void
        +onVoiceSpoken(bot: Bot, voiceMessage: VoiceMessage) void
        +onBroadcastStopped(bot: Bot, speakerId: String) void
        +onTimeElapsed(bot: Bot, seconds: int) void
    }

    class Bot {
        +id: String = "bot"
        +quota: int
        +replyCycleIndex: int
        -currentState: State
        +update(event: CommunityEvent) void
        +changeState(nextState: State) void
        +onMessageReceived(message: Message) void
        +onPostPublished(post: Post) void
        +onVoiceSpoken(voiceMessage: VoiceMessage) void
        +onBroadcastStarted(speakerId: String) void
        +onBroadcastStopped(speakerId: String) void
        +onTimeElapsed(seconds: int) void
        +replyChatMessage(content: String, tags: List~String~) void
        +commentPost(postId: String, content: String, tags: List~String~) void
        +broadcastVoice(content: String) void
        +resetReplyCycle() void
        +getNextReplyMessage() String
    }

    %% OOA 既有結構
    Participant <|-- Member
    Participant <|-- Bot
    Member --> Role
    WaterballCommunity "1" *-- "1" ChatRoom : 擁有
    WaterballCommunity "1" *-- "1" Forum : 擁有
    WaterballCommunity "1" *-- "1" Broadcast : 擁有
    WaterballCommunity "1" *-- "1" Bot : 常駐
    WaterballCommunity "1" o-- "0..*" Participant : 在線參與者
    ChatRoom "1" *-- "0..*" Message
    Forum "1" *-- "0..*" Post
    Post "1" *-- "0..*" Comment
    Broadcast "1" *-- "0..*" VoiceMessage
    RecordingSession "1" o-- "0..*" VoiceMessage : 記錄語音內容
    KnowledgeKingGame "1" *-- "3" Question : 包含題庫

    %% Observable 的既有具體類別直接實作共同 Subject 契約。
    Observable <|.. ChatRoom
    Observable <|.. Forum
    Observable <|.. Broadcast
    Observable <|.. WaterballCommunity
    CommunityObserver <|.. Bot
    Observable "1" o-- "0..*" CommunityObserver : observers

    %% 具型別事件與 OOA 領域物件的連結。
    CommunityEvent <|.. MessageReceivedEvent
    CommunityEvent <|.. PostPublishedEvent
    CommunityEvent <|.. BroadcastStartedEvent
    CommunityEvent <|.. VoiceSpokenEvent
    CommunityEvent <|.. BroadcastStoppedEvent
    CommunityEvent <|.. TimeElapsedEvent
    MessageReceivedEvent --> Message
    PostPublishedEvent --> Post
    VoiceSpokenEvent --> VoiceMessage
    Observable ..> CommunityEvent : notify(event)
    CommunityObserver ..> CommunityEvent : update(event)

    %% State Context 與 Concrete State。
    Bot "1" --> "1" State : currentState
    State <|.. NormalState
    State <|.. RecordState
    State <|.. KnowledgeKingState
    RecordState "1" o-- "0..1" RecordingSession : 錄音活動
    KnowledgeKingState "1" o-- "0..1" KnowledgeKingGame : 知識王活動

    Bot --> ChatRoom : replyChatMessage()
    Bot --> Forum : commentPost()
    Bot --> Broadcast : broadcastVoice()

    note for CommunityEvent "【具型別事件與實作依據】\n每個子類別都是『社群中已發生、可被通知』的事件，\n所以都可作為 notify(event) 與 update(event) 的統一參數。\n共同契約只保證可被傳遞，不強加不存在的共同欄位；\n各子類別封裝自身必要資料。ChatRoom.postMessage() 建立\nMessageReceivedEvent；Forum.createPost() 建立 PostPublishedEvent；\nBroadcast／Community 依事件建立對應子類別。\nBot.update(event) 轉派：Message→onMessageReceived、\nPost→onPostPublished、Start/Voice/Stop→onBroadcastXxx、\nTime→onTimeElapsed。"
    note for CommunityObserver "【Observer v1-1】\n所有 Observer 只實作 update(CommunityEvent)。\n事件資料不再藏在 Object payload，而是由各 Event\n子類別以 Message / Post / VoiceMessage 等強型別連結表達。"
    note for State "【State v1-1】\nState 部分與 OOD-v1 相同：Context Bot 的既有 onXxx()\n與 State／ConcreteState 的同名 FN 一對一委派。"
